# TegraTX2

ColorFilt/: CMakeLists.txt  color_filter.cpp
Lab2/: CMakeLists.txt  test.cpp
Lab3/: CMakeListsL3a.txt  CMakeListsL3c.txt  CMakeListsL3d.txt  example1L3.cpp  example2L3.cpp  example2L3P4.cpp
Lab4/: .example3.cpp.swm  CMakeLists.txt  example3.cpp  example3P1.cpp
Lab5/: .example5.cpp.swp  CMakeLists.txt  LeastSquares.cpp  example5.cpp
Lab6/: .example6.cpp.swo  .example6.cpp.swp  CMakeLists.txt  LeastSquares.cpp  LeastSquares.h  example6.cpp
Lab7/: CMakeLists.txt  LeastSquares.cpp  LeastSquares.h  Test_Serial  Test_Serial.c  example7.cpp
Lab7b/: .LeastSquares.cpp.swp  .example7.cpp.swp  CMakeLists.txt  LeastSquares.cpp  Test_Serial.cpp  example7b.cpp
